# TextAnalyser

./: CMakeLists.txt  Main.cpp  ProblemStatement.md  README.md
coverage_reports/TextAnalyzer/: index-sort-f.html  index-sort-l.html  index.html
coverage_reports/TextAnalyzer/src/: TextAnalyzer.cpp.func-sort-c.html  TextAnalyzer.cpp.func.html  TextAnalyzer.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
input_data/: data1.txt  data2.txt
text_analyzer/: CMakeLists.txt
text_analyzer/include/: ITextAnalyzer.hpp  TextAnalyzer.hpp
text_analyzer/src/: TextAnalyzer.cpp
text_analyzer/unit_test/: CMakeLists.txt  TextAnalyzer_test.cpp
text_analyzer/unit_test/test_data/: InputFileWithExtraSpaces.txt  InputFileWithLessThan10Words.txt  InputFileWithMoreThan10Words.txt  InputFileWithOnlySmileys.txt  InputFileWithOnlyText.txt  InputFileWithPunctuations.txt  InputFileWithRepeatedSmileys.txt  InputFileWithUnsupportedSmileys.txt
